<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="pais">Brasil</string>
    <string name="especiais">Especiais</string>
    <string name="conteudo_do_banner_inicial">Banner inicial dos pacotes</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pedido">REALIZAR PEDIDO</string>
    <string name="imagem_do_pacote">Imagem da cidade do pacote</string>
    <string name="divisor">/</string>
    <string name="mes">MM</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="informacoes_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="ano">AA</string>
    <string name="valor_da_compra">Valor da compra</string>
    <string name="cvc">CVC</string>
    <string name="nome_do_cartao">Nome do cartão</string>
    <string name="finalizar_compra">finalizar compra</string>
    <string name="mascara_nome_do_cartao">abcdefghijklmnopqrstuvwxyzç\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZÇ</string>
    <string name="parabens">Parabéns !</string>
    <string name="compra_sucesso">Compra realizada com sucesso</string>
    <string name="confira_a_compra">Confira o resumo da compra :</string>
    <string name="banner_de_sucesso">Banner de sucesso</string>
    <string name="imagem_da_cidade">Imagem da cidade</string>
</resources>
