<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/pagamento_pacote_informacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/informacoes_pagamento"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_pacote_titulo_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_pacote_informacao" />

    <TextView
        android:id="@+id/pagamento_pacote_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#4CAF50"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pagamento_pacote_titulo_valor"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_pacote_titulo_valor"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/pagamento_pacote_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/numero_cartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_pacote_valor"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pagamento_pacote_mes"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/mes"
        android:inputType="textPersonName"
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="@+id/pagamento_pacote_numero_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_pacote_numero_cartao"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/pagamento_pacote_d"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center|center_vertical"
        android:maxLength="2"
        android:text="@string/divisor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_pacote_mes"
        app:layout_constraintEnd_toStartOf="@id/pagamento_pacote_ano"
        app:layout_constraintStart_toEndOf="@+id/pagamento_pacote_mes"
        app:layout_constraintTop_toTopOf="@+id/pagamento_pacote_mes" />

    <EditText
        android:id="@+id/pagamento_pacote_ano"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ano"
        android:inputType="textPersonName"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@+id/pagamento_pacote_d"
        app:layout_constraintTop_toTopOf="@+id/pagamento_pacote_mes"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pagamento_pacote_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        android:gravity="center"
        android:hint="@string/cvc"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="@id/pagamento_pacote_ano"
        app:layout_constraintEnd_toEndOf="@id/pagamento_pacote_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_pacote_numero_cartao"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pagamento_pacote_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="@string/mascara_nome_do_cartao"
        android:ems="10"
        android:hint="@string/nome_do_cartao"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_pacote_cvc"
        app:layout_constraintStart_toStartOf="@+id/pagamento_pacote_mes"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_pacote_cvc"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/pagamento_pacote_finalizar_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/botao_realizar_pedido"
        android:text="@string/finalizar_compra"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/pagamento_pacote_nome_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_pacote_nome_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_pacote_nome_cartao" />
</androidx.constraintlayout.widget.ConstraintLayout>